--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -11,6 +11,7 @@
     box-sizing: border-box;
 }
 
-#app {
-    font-family: 'Roboto', sans-serif;
+body {
+    font-family: $mainFont ;
+    height: 100vh;
 }
