creata sezione albums staticamente

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -4,3 +4,5 @@ $mainFont : 'Roboto', sans-serif;
 // Colors
 $backgroundBlue: #1e2d3b;
 $componentsBlue: #2e3a46;
+$albumTitle: white;
+$albumInfo: #808080;
